# NTUT-CSIE-Master-Course

./: .gitignore  README.md  index.html
113-1/Computer Animation/: README.md
113-1/Embedded System/: 113-1 Embedded System HW4 Answer Sheet.docx
113-1/Embedded-System/Final Project Presentation/: My_Speaking_text.docx
113-1/Embedded-System/Homework3/: 113598043_113-1 Embedded System HW3.docx
113-1/Embedded-System/Homework5/: 113598043_113-1 Embedded System HW5 - Detailed.docx
113-1/Embedded-System/Homework6/: 113598043_113-1 Embedded System HW6 (Answer sheet).docx
113-1/Embedded-System/Homework7/: 113598043_113-1 Embedded System HW7 Answer Sheet.docx
113-1/Embedded-System/Homework8/: 113598043_113-1 Embedded System HW8 Answer Sheet.docx
113-1/Embedded-System/Homework9/: 113598043_113-1 Embedded System HW9 Answer Sheet.docx
113-1/NTHU Natural Language Processing/: README.md
113-1/NTHU Natural Language Processing/Assignment1/: Download_English_Wikipedia_articles_on_windows.py  assignment1.ipynb
113-1/NTHU Natural Language Processing/Assignment2/: main.ipynb  requirements.t.txt
113-1/NTHU Natural Language Processing/Assignment3/: assignment3.ipynb  main.ipynb
113-1/NTHU-Natural-Language-Processing/: README.md  nlp.html
113-1/NTHU-Natural-Language-Processing/Assignment1/: HW1.py
113-1/NTHU-Natural-Language-Processing/Assignment2/: NLP_HW2_NTUT_113598043.py
113-1/NTHU-Natural-Language-Processing/Assignment3/: assignment3.ipynb
113-1/NTHU-Natural-Language-Processing/Assignment3/NLP_HW3_NTUT_113598043/: NLP_HW3_NTUT_113598043.docx  NLP_HW3_NTUT_113598043.py  requirements.txt
113-1/NTHU-Natural-Language-Processing/Assignment4/: NLP_HW4_NTUT_113598043.docx  NLP_HW4_NTUT_113598043.py  assignment4_RAG.ipynb  requirements.txt  ten-correct-answer.txt
113-1/NTHU-Natural-Language-Processing/Assignment4/NLP_HW4_NTUT_113598043/: NLP_HW4_NTUT_113598043.docx  NLP_HW4_NTUT_113598043.py
113-1/NTHU-Natural-Language-Processing/Term_Project/: Detect_AI_Generated_Text_Using_BLSTM_&_Distilbert.ipynb  LLM_Detect_Text_Cluster_中文.ipynb  NLP_Term-Project_Group35_Paper.docx  NLP_TermProject_Group35.docx  README.md  combined.ipynb  figure.pptx  post_template.pptx
113-1/Pattern-oriented Software Design/Assignment1/: Problem_statement.md
113-1/Pattern-oriented Software Design/HW 1/: Exercise.md  GeoApp.java  Shape.java
113-1/Pattern-oriented Software Design/HW 1/test_data/: output.txt
113-1/Pattern-oriented-Software-Design/: README.md
113-2/Blockchain/: SaluToken.sol
113-2/Blockchain-Techniques-and-Applications/Guest_Lecture-Smart_Contract/MyNFT/: checksum
113-2/Blockchain-Techniques-and-Applications/Guest_Lecture-Smart_Contract/MyNFT/metadata/: 1  10  11  13  15  16  17  2  3  4  5  7  9
113-2/Blockchain-Techniques-and-Applications/Guest_Lecture-Smart_Contract/MyNFT/metadata_JSON/: 11.json  12.json  13.json  14.json  15.json  17.json  3.json  4.json  5.json  6.json  8.json
113-2/Blockchain/Guest_Lecture-Smart_Contract/MyNFT/metadata/: 0  12  14  6  8
113-2/Cloud-and-IoT-Security/: ZuvioIRS_Cource_QA  ZuvioIRS_Cource_QA.md  ZuvioIRS_Course_QA.md
113-2/Cloud-and-IoT-Security/MidTerm-Exam/: GCP_Quiz_and_Lab.md  MidTerm_Exam_Overview.md  ZuvioIRS_Cource_QA.md  cloud_gcp_exam_100_questions.md
113-2/Computer-Graphics/CG_LAB/: test.cpp
113-2/Computer-Graphics/Final-Project/: CMakeLists.txt  README.md  main.cpp
113-2/Computer-Graphics/Final-Project/TGA/: diamond.tga  heart.tga  moon.tga  night.tga  pottedPlant.tga
113-2/Computer-Graphics/Final-Team-Project/: CMakeLists.txt
113-2/Computer-Graphics/Final-Team-Project/TGA/: wood.tga
113-2/Computer-Graphics/FinalProject_group8/: CMakeLists.txt  FinalProject_group8.cpp
113-2/Computer-Graphics/FinalProject_group8/TGA/: black&whiteTiles.tga  bush.tga  sun.tga
113-2/Computer-Graphics/Freeglut/: Freeglut_build_Tutorial.md
113-2/Computer-Graphics/Lab01/: CMakeLists.txt  Demo.mkv  main.cpp
113-2/Computer-Graphics/Lab01/0226/: CG_0226.sln
113-2/Computer-Graphics/Lab01/0226/CG_0226/: CG_0226.vcxproj  (+1 more)
113-2/Computer-Graphics/Lab02/: CMakeLists.txt  main.cpp
113-2/Computer-Graphics/Lab02/0305/: 0305.sln  DrawiingShapes.cpp
113-2/Computer-Graphics/Lab02/0305/0305/: 0305.vcxproj  0305.vcxproj.filters
113-2/Computer-Graphics/Lab03/: CMakeLists.txt  main.cpp
113-2/Computer-Graphics/Lab04/: CMakeLists.txt  README.docx  README.md  main.cpp
113-2/Computer-Graphics/Lab05/: CMakeLists.txt  main.cpp
113-2/Computer-Graphics/Lab06/: CMakeLists.txt  README.md  main.cpp
113-2/Computer-Graphics/Lab07/: CMakeLists.txt  README.md  main.cpp
113-2/Computer-Graphics/Lab08/: CMakeLists.txt  README.md  main.cpp
113-2/Computer-Graphics/Lab09/: CMakeLists.txt  README.md  main.cpp
113-2/Computer-Graphics/Lab10/: CMakeLists.txt  Lab10.docx  MidTerm-Project.docx  README.md  main.cpp
113-2/Computer-Graphics/Lab11/: CMakeLists.txt  main.cpp
113-2/Computer-Graphics/Lab12/: CMakeLists.txt  main.cpp
113-2/Computer-Graphics/Lab13/: CMakeLists.txt  README.md  math3d.cpp  shadow.cpp
113-2/Computer-Graphics/Lab14/: CMakeLists.txt  README.md  main.cpp  shadow.cpp
113-2/Computer-Graphics/MidTerm/: main.cpp
113-2/Computer-Graphics/Midterm-Project/: CMakeLists.txt  MidTerm-Project.docx  MidTermProject_Doc.docx  README.md  main.cpp
113-2/Data-Science-Principles-with-Applications-on-Educational-Data/Final/: cwurData_2014_2015.csv  final_program_group06.ipynb  final_report_group06.docx
113-2/Data-Science-Principles-with-Applications-on-Educational-Data/Final/Program/: final_program_group06.ipynb
113-2/Data-Science-Principles-with-Applications-on-Educational-Data/HW1/: HW1.ipynb
113-2/Data-Science-Principles-with-Applications-on-Educational-Data/Homework/HW2/: HW2.ipynb
113-2/Data-Science-Principles-with-Applications-on-Educational-Data/Homework/HW3/: HW3.ipynb  exam_results.csv
113-2/Data-Science-Principles-with-Applications-on-Educational-Data/Proposal/: proposal_report_group6.docx  proposal_slide_group6.pptx
LOGO/Combine/: logo_combine.psd
LOGO/Horizontal/: TaipeiTech-font-zh_horizontal.psd
(+20 files in other folders)
